--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -5,5 +5,8 @@ set(SOURCE_FILES poker.c)
 add_executable(poker poker.c)
 target_link_libraries(poker ${CURSES_LIBRARIES})
 
+add_executable(demo demo.c)
+target_link_libraries(demo ${CURSES_LIBRARIES})
+
 add_executable(poker_ui poker_ui.c)
 target_link_libraries(poker_ui ${CURSES_LIBRARIES})
